fix bug #47849 (Non-deep import loses the namespace) add test